--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -148,7 +148,7 @@ h6 {
   --background-color: rgba(255, 255, 255, 0);
   color: var(--default-color);
   background-color: var(--background-color);
-  padding: 15px 0;
+  padding: 0px 0;
   transition: all 0.5s;
   z-index: 997;
 }
@@ -204,6 +204,12 @@ h6 {
   .header .navmenu {
     order: 3;
   }
+}
+@media(max-width:800px){
+  .header .logo img {
+  max-height: 80px;
+  margin-right: 8px;
+}
 }
 
 .scrolled .header {
@@ -811,8 +817,8 @@ section,
 }
 
 .hero .hero-image .floating-card.emergency-card {
-  top: -77px;
-  left: -30px;
+  top: 15px;
+  left: 15px;
   z-index: 3;
 }
 
@@ -932,6 +938,7 @@ section,
 @media (max-width: 768px) {
   .hero .hero-content .hero-title {
     font-size: 2.2rem;
+    color:#04d5ea;
   }
 }
 
