--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1776,7 +1776,7 @@ section,
   overflow: hidden;
   box-shadow: 0 5px 20px rgba(0, 0, 0, 0.08);
   transition: all 0.3s ease;
-  height: 100%;
+  /* height: 100%; */
 }
 
 .featured-services .service-card:hover {
@@ -1809,7 +1809,7 @@ section,
 }
 
 .featured-services .service-image {
-  height: 220px;
+  height: 450px;
   overflow: hidden;
   position: relative;
 }
